Fixed: wflow-consolweb - Datalist Builder - Datalist in card mode visibly flickers before showing cards. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/datalist8.css
+++ b/wflow-consoleweb/src/main/webapp/css/datalist8.css
@@ -1,3 +1,6 @@
+.dataList {
+    display: none;
+}
 .dataList table {
     min-width:100%;
     border-bottom: 2px solid var(--theme-color5, #dee2e6);
